update the files

--- a/register.html
+++ b/register.html
@@ -5,7 +5,6 @@
     <title>Quiz App </title>
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="reg.css">
-    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="regform">
@@ -14,15 +13,15 @@
             <div class="input">
                 
                 <em>
-                <label class="textlabel" for="name">User Name</label>
+                <label class="textlabel" for="name"><strong> Name</strong></label>
                 <input type="text" id="name" name="name">
             </div>
             <div class="input">
-                <label class="textlabel" for="email">Email</label>
+                <label class="textlabel" for="email"><strong>Email</strong></label>
                 <input type="email" name="email" id="email">
             </div>
             <div class="input">
-                <label class="textlabel" for="pwd">Password</label>
+                <label class="textlabel" for="pwd"><strong>Password</strong></label>
                 <input type="password" name="pwd" id="pwd" >
             </div>
             <div class="radio">
@@ -32,7 +31,7 @@
                 <label for="female">Female</label>
             </div>
             <div class="btn">
-                <button type="submit"><em>Register</em></button></div></button>
+                <button type="submit"><em><a href="index.html">Register</a></em></button></div></button>
             </div>
         </em>
         </form>
